<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layPrinReg"
    android:tag="@string/ip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_gravity="center|left"
                android:textSize="24dp"
                android:textColor="#fff"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres"
            android:inputType="text"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/txtPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="24dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/borde_circular"
            android:text="@string/Registrarte" />
    </FrameLayout>


</LinearLayout>