<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPrinMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/ip"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">

                <TextView
                    android:layout_gravity="center|left"
                    android:textSize="24dp"
                    android:textColor="#fff"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenSonora"
            android:layout_width="360px"
            android:layout_height="360px"
            android:layout_gravity="center"
            android:baselineAligned="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/lLET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtCorreoIS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/user"
                android:textSize="24dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/txtContraIS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="24dp"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/btnInicioS"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/borde_circular"
                android:text="@string/IS"
                android:textSize="24dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fLRegistro"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_circular"
            android:text="@string/Registrarte"
            android:textColor="@color/colorAccent"
            android:textSize="24dp"
            android:layout_gravity="center_horizontal|center"/>
    </FrameLayout>

</LinearLayout>